# htbox

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml
docs/superpowers/: feature-list.md
docs/superpowers/plans/: 2026-04-13-htbox-backend.md  2026-04-13-htbox-cli-commands.md  2026-04-13-htbox-cmd-management.md  2026-04-13-htbox-config-module.md  2026-04-13-htbox-project-setup.md  2026-04-13-htbox-remaining-features.md  2026-04-13-htbox-service-commands.md  2026-04-16-htbox-init-implementation.md
docs/superpowers/specs/: 2026-04-13-htbox-cli-rust-design.md  2026-04-16-htbox-init-design.md
src/: backend.rs  cli.rs  commands.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
src/backend/: cron.rs  mod.rs  systemd.rs
src/commands/: cmd.rs  init.rs  service.rs
src/commands/cmd/: cmd_config.rs  cmd_runner.rs
src/config/: env.rs  global.rs  service.rs
src/runtime/: mod.rs  monitor.rs
src/state/: json.rs  mod.rs
tests/: backend_test.rs  cli_test.rs  config_test.rs  runtime_test.rs  state_test.rs
