[package]
name = "htbox"
version = "0.1.0"
edition = "2021"
description = "Linux CLI tool for service and command management"
authors = ["htbox"]
license = "MIT"

[[bin]]
name = "htbox"
path = "src/main.rs"

[lib]
name = "htbox"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
tera = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1